[project]
name = "kernelvulnauditp"
version = "0.1.0"
description = "This tool checks the practical functionality of linux kernel exploits"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flet>=0.85.2",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
]

